# openinfer-oinf

./: .gitignore  MANIFEST.in  README.md  dataclass_to_oinf.py  oinf_common.py  oinf_encoder.py  oinf_format.py  oinf_numeric.py  oinf_packed.py  oinf_types.py  oinf_verify.py  pyproject.toml  verify_oinf.py
.github/workflows/: publish.yml
examples/: accumulation_demo_oinf.py  cache_window_slice_oinf.py  kv_cache_decode_oinf.py  linear_attention_oinf.py  mlp_regression_oinf.py  moe_routing_oinf.py  online_weight_update_oinf.py  quantized_linear_oinf.py  residual_mlp_stack_oinf.py  stability_guard_oinf.py  streaming_pipeline_oinf.py
res/models/: accumulation_demo.oinf  cache_window_slice.oinf  kv_cache_decode.oinf  linear_attention.oinf  mlp_regression.oinf  moe_routing.oinf  online_weight_update.oinf  quantized_linear.oinf  residual_mlp_stack.oinf  stability_guard.oinf  streaming_pipeline.oinf
tests/: run_oinf_tests.py  test_common.py  test_encoder_verify.py  test_packed_format.py  test_types_numeric.py
